# cowboy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini  imgui.ini  makefile
.github/workflows/: build.yml
build-no-jt/: CMakeCache.txt  Makefile  cmake_install.cmake  natsukashii
build-windows/: Makefile  cmake_install.cmake
include/: common.h  core.h  debugwindow.h  mainwindow.h  renderer.h  renderwidget.h
include/core/: apu.h  bus.h  cpu.h  mbc.h  mem.h  natsukashii.h  ppu.h
include/core/apu/: ch1.h  ch2.h  ch3.h  ch4.h  control.h
include/scheduler/: scheduler.h
src/: core.cpp  debugwindow.cpp  main.c  main.cpp  mainwindow.cpp  renderer.cpp  renderwidget.cpp
src/core/: apu.cpp  bus.c  bus.cpp  cpu.c  cpu.cpp  mem.c  mem.cpp  natsukashii.c  natsukashii.cpp  ppu.c  ppu.cpp
src/core/apu/: ch1.cpp  ch2.cpp  ch3.cpp  ch4.cpp  control.cpp
src/core/cpu/: generator.cpp  instructions.cpp
src/core/mbc/: mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  nombc.cpp
src/scheduler/: scheduler.cpp
src/shaders/: vert.glsl
